# poseidon-benchmarks

./: .gitmodules  Cargo.toml  LICENSE  README.md  dhat-heap.json
benches/: poseidon_bench.rs  sponge.rs
docs/: index.html
docs/Poseidon-Xeon/0/report/: index.html
docs/Poseidon-Xeon/1/report/: index.html
docs/Poseidon-Xeon/2/report/: index.html
docs/Poseidon-Xeon/3/report/: index.html
docs/Poseidon-Xeon/Cryptoexperts/0/base/: benchmark.json  sample.json  tukey.json
docs/Poseidon-Xeon/Cryptoexperts/2/base/: estimates.json
docs/Poseidon-Xeon/Cryptoexperts/3/base/: benchmark.json  tukey.json
docs/Poseidon-Xeon/Cryptoexperts/3/new/: estimates.json
docs/Poseidon-Xeon/Cryptoexperts/3/report/: index.html
docs/Poseidon-Xeon/Cryptoexperts/4/base/: estimates.json  tukey.json
docs/Poseidon-Xeon/Cryptoexperts/4/new/: benchmark.json
docs/Poseidon-Xeon/Cryptoexperts/5/new/: benchmark.json  tukey.json
docs/Poseidon-Xeon/Cryptoexperts/6/base/: benchmark.json  estimates.json  tukey.json
docs/Poseidon-Xeon/Cryptoexperts/report/: index.html
docs/Poseidon-Xeon/Dusk-Network/0/base/: sample.json  tukey.json
docs/Poseidon-Xeon/Dusk-Network/0/new/: estimates.json
docs/Poseidon-Xeon/Dusk-Network/1/base/: benchmark.json
docs/Poseidon-Xeon/Dusk-Network/1/new/: sample.json
docs/Poseidon-Xeon/Dusk-Network/1/report/: index.html
docs/Poseidon-Xeon/Dusk-Network/2/base/: benchmark.json  sample.json  tukey.json
docs/Poseidon-Xeon/Dusk-Network/2/new/: estimates.json
docs/Poseidon-Xeon/Dusk-Network/3/new/: tukey.json
docs/Poseidon-Xeon/Dusk-Network/3/report/: index.html
docs/Poseidon-Xeon/Dusk-Network/4/base/: estimates.json  tukey.json
docs/Poseidon-Xeon/Dusk-Network/5/new/: estimates.json
docs/Poseidon-Xeon/Dusk-Network/5/report/: index.html
docs/Poseidon-Xeon/Dusk-Network/6/base/: estimates.json  sample.json
docs/Poseidon-Xeon/Neptune/0/base/: sample.json  tukey.json
docs/Poseidon-Xeon/Neptune/0/report/: index.html
docs/Poseidon-Xeon/Neptune/1/new/: estimates.json  sample.json
docs/Poseidon-Xeon/Neptune/1/report/: index.html
docs/Poseidon-Xeon/Neptune/2/base/: tukey.json
docs/Poseidon-Xeon/Neptune/2/new/: benchmark.json  estimates.json
docs/Poseidon-Xeon/Neptune/2/report/: index.html
docs/Poseidon-Xeon/Neptune/3/new/: benchmark.json  sample.json  tukey.json
docs/Poseidon-Xeon/Neptune/4/new/: estimates.json
docs/Poseidon-Xeon/Neptune/5/base/: tukey.json
docs/Poseidon-Xeon/Neptune/6/base/: sample.json
docs/Poseidon-Xeon/Neptune/6/new/: benchmark.json  tukey.json
docs/Poseidon-Xeon/Risc0/0/base/: benchmark.json  tukey.json
docs/Poseidon-Xeon/Risc0/0/report/: index.html
docs/Poseidon-Xeon/Risc0/1/base/: estimates.json
docs/Poseidon-Xeon/Risc0/1/new/: benchmark.json  sample.json
docs/Poseidon-Xeon/Risc0/1/report/: index.html
docs/Poseidon-Xeon/Risc0/2/report/: index.html
docs/Poseidon-Xeon/Risc0/3/new/: sample.json
docs/Poseidon-Xeon/Risc0/3/report/: index.html
docs/Poseidon-Xeon/Risc0/4/base/: benchmark.json
docs/Poseidon-Xeon/Risc0/5/base/: benchmark.json  (+1 more)
docs/Poseidon-Xeon/Risc0/report/: index.html
docs/Poseidon-Xeon/report/: index.html
docs/Poseidon-cryptoexperts-vs-risc0/15/report/: index.html
docs/Poseidon-cryptoexperts-vs-risc0/7/report/: index.html
docs/Poseidon-cryptoexperts-vs-risc0/Cryptoexperts/report/: index.html
docs/Poseidon-cryptoexperts-vs-risc0/Risc0/report/: index.html
docs/Poseidon-cryptoexperts-vs-risc0/report/: index.html
docs/criterion/Cryptoexpert-widths/report/: index.html
docs/criterion/Neptune-widths/report/: index.html
docs/criterion/Poseidon-all/report/: index.html
docs/criterion/report/: index.html
docs/report-cryptoexperts-vs-risc0/: index.html
preliminaries/Poseidon-Xeon/4/report/: index.html
preliminaries/Poseidon-Xeon/5/report/: index.html
preliminaries/Poseidon-Xeon/6/report/: index.html
preliminaries/Poseidon-Xeon/Dusk-Network/report/: index.html
preliminaries/Poseidon-Xeon/Neptune/report/: index.html
preliminaries/report/: index.html
src/: build.rs  lib.rs  main.rs  poseidon_ce.c  sponge.rs
src/dusk_poseidon/src/lib/: cipher.rs  sponge.rs
(+758 files in other folders)
