[package]
name = "poseidon-benchmarks"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#lambdaworks
lambdaworks-math = {path = "src/lambdaworks/math"}
lambdaworks-crypto = {path = "src/lambdaworks/crypto"}

#neptune
neptune = {path = "src/neptune"}
rand_xorshift = "0.3.0"
ff = "0.13.0"

#arkworks
ark-ff = "0.4.0"
ark-bn254 = { version = "0.4.0" }
ark-std = { version = "0.4.0" }

#dusk-network
dusk-bls12_381 = { version = "0.11", default-features = false }
dusk-jubjub = { version = "0.12", default-features = false }
dusk-bytes = "0.1"
dusk-hades = "0.21"
dusk-plonk = { version = "0.14", default-features = false, features = ["alloc"] }

#precompiles
sha2 = "0.10.7"
ripemd = "0.1.3"

#utils
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }
hex-wrapper = { version = "1.4.1", features = ["rand"]}

[features]
default = [
    "dusk-plonk/std",
    "dusk-jubjub/std",
    "dusk-bls12_381/default",
    "alloc",
]
alloc = [
    "dusk-hades/plonk"
]
merkle = []
size_16 = ["rkyv/size_16"]
size_32 = ["rkyv/size_32"]
size_64 = ["rkyv/size_64"]
rkyv-impl = [
    "rkyv/validation",
    "rkyv/alloc",
    "rkyv",
    "bytecheck",
    "dusk-bls12_381/rkyv-impl"
]

[lib]
name = "poseidon_functions"
path = "src/lib.rs"

[[bin]]
name = "poseidon_benchmarks"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
rand = { version = "0.8", default-features = false, features = ["getrandom", "std_rng"] }
blstrs = {version = "0.7.1"}
typenum = "1.17.0"

[build-dependencies]
cc = "1.0"

[[bench]]
name = "poseidon_bench"
harness = false