[package]
name = "poseidon-benchmarks"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#dusk
dusk-poseidon = {path = "src/dusk"}

#risc0
risc0-zkp = {path = "src/risc0/risc0/zkp"}
risc0-core = {path = "src/risc0/risc0/core"}

#lambdaworks
lambdaworks-math = {path = "src/lambdaworks/math"}
lambdaworks-crypto = {path = "src/lambdaworks/crypto"}

#neptune
neptune = {path = "src/neptune"}
rand_xorshift = "0.3.0"
ff = "0.13.0"

#arkworks
ark-ff = "0.4.0"
ark-bn254 = { version = "0.4.0" }
ark-std = { version = "0.4.0" }

#precompiles
sha2 = "0.10.7"
ripemd = "0.1.3"

#utils
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }
hex-wrapper = { version = "1.4.1", features = ["rand"]}
libc = "0.2.148"

[[bin]]
name = "poseidon_benchmarks"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
rand = { version = "0.8", default-features = false, features = ["getrandom", "std_rng"] }
blstrs = {version = "0.7.1"}
typenum = "1.17.0"

[[bench]]
name = "poseidon_bench"
harness = false